--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="/assets/tachyons.min.css">
+    <link rel="stylesheet" href="/assets/main.css">
   </head>
-  <body>
-    {% include navigation.html %}
-    {{ content }}
+  <body class="f5 f4-ns flex flex-column vh-100 black bg-near-white sans-serif">
+    <div class="i flex justify-center pa2 pa3-ns f5 f2-ns bg-moon-gray">
+      D&D Homebrew
+    </div>
+    <div class="flex justify-center bg-moon-gray flex-wrap bb bw1 f7 f5-ns">
+        {% for item in site.data.navigation %}
+          <a
+            href="{{ item.link }}"
+            class="b no-underline pa1 pa2-ns ma1 ma2-ns black grow {% unless page.url != '/' and item.link == '/' %}{% if page.url contains item.link %}bb bw2 b--blue pe-none{% endif %}{% endunless %}"
+          >
+            {{ item.name }}
+          </a>
+        {% endfor %}
+    </div>
+
+    <div class="flex justify-center overflow-auto h-100">
+      <div class="w-90 w-80-m w-70-l mw7">
+        {{ content }}
+      </div>
+    </div>
   </body>
 </html>
