--- a/_layouts/enchantments.html
+++ b/_layouts/enchantments.html
@@ -11,11 +11,17 @@ Enchantments:&nbsp;
   {% endfor %}
 </p>
 
-<h1>{{ page.type | capitalize }} Enchantments</h1>
+<h1>{{ page.title }}</h1>
 
 <hr>
 
-{% for item in site.data.enchantments.content %}
+{% if page.filter %}
+  {% assign filtered_enchantments = site.data.enchantments.content | where:"type",page.filter %}
+{% else %}
+  {% assign filtered_enchantments = site.data.enchantments.content %}
+{% endif %}
+
+{% for item in filtered_enchantments %}
   <h2>{{ item.name | capitalize }} - {{ item.type | capitalize }} enchantment</h1>
   <p>
     <b>Cost:</b>&nbsp;
